--- a/css/admin.css
+++ b/css/admin.css
@@ -82,6 +82,14 @@ table tr td{
     text-decoration: none;
 }
 
+.success{
+    color: #2ed573;
+}
+
+.error{
+    color: #ff4757;
+}
+
 /* CSS Mwnu */
 .menu{
     border-bottom: 1px solid grey;
