--- a/css/admin.css
+++ b/css/admin.css
@@ -134,4 +134,11 @@ table tr td{
     color: white;
  }
 
+ /* CSS for Login */
+.login{
+    width: 20%;
+    border: 1px solid grey;
+    margin: 10% auto;
+    padding: 2% 2%;
+}
  
